# tradingv2-eq

./: .gitignore  README.md  agent.md  package.json  pyproject.toml
config/: system.yaml
docs_state/: current-architecture.md  current-data-sources.md  non-technical-summary.md  nselib-coverage.md  open-risks.md  screener-coverage.md  system-overview.md
how_to/: artifact_guide.md  run_research.md  setup.md  troubleshooting.md
skills/: current-system-state.md  data-contracts.md  market-curator-rules.md  research-rules.md  risk-rules.md  trading-strategy-research.md  trading-system.md
src/tradingbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tradingbot/backtest/: engine.py  execution.py  walk_forward.py
src/tradingbot/core/: config.py  enums.py  models.py
src/tradingbot/dashboard/: app.py
src/tradingbot/data_ingest/fallbacks/: __init__.py  fii_dii.py
src/tradingbot/execution/: paper.py
src/tradingbot/indicators/: __init__.py  calculator.py  history.py
src/tradingbot/jobs/: __init__.py  daily_run.py  research_run.py
src/tradingbot/regime/: __init__.py  engine.py  history.py
src/tradingbot/risk/: position_sizer.py
src/tradingbot/screening/: engine.py  history.py
src/tradingbot/strategy/: engine.py  master.py
tests/: test_config.py  test_costs.py  test_curator.py  test_dataset_builder.py  test_master_strategy_hal.py  test_nselib_adapter.py  test_portfolio_research.py  test_regime.py  test_run_state_summary.py  test_screener_history.py  test_strategy.py  test_trade_decision.py  test_walk_forward.py
(+11 files in other folders)
