[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbot"
version = "0.1.0"
description = "NSE cash equity EOD quant trading system"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "lxml>=5.4.0",
  "nselib>=2.5.1",
  "nsetools>=2.0.1",
  "pandas>=2.2.3",
  "pymongo>=4.8.0",
  "PyYAML>=6.0.2",
  "requests>=2.32.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
